# ai-dial-sdk

./: .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  Makefile  README.md  SECURITY.md  example.py  new_app.py  noxfile.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: integration_tests.yml  pr-title-check.yml  pr.yml  pr_check_tests.yml  release.yml
aidial_sdk/: __init__.py  _errors.py  application.py  assistants.py  choice.py  chunk_stream.py  exceptions.py  header_propagation.py  header_propagator.py  stage.py  telemetry.py
aidial_sdk/chat_completion/: __init__.py  _chunk_consumer.py  _types.py  base.py  chat_completion.py  choice.py  choice_base.py  chunk_accumulator.py  chunks.py  enums.py  function_call.py  function_tool_call.py  request.py  response.py  snapshot.py  stage.py
aidial_sdk/deployment/: from_request_mixin.py  parameters.py  rate.py  tokenize.py  truncate_prompt.py
aidial_sdk/embeddings/: __init__.py  base.py  request.py  response.py
aidial_sdk/pydantic_v1/: __init__.py
aidial_sdk/telemetry/: init.py  types.py
aidial_sdk/utils/: _attachment.py  _content_stream.py  _headers.py  _reflection.py  env.py  errors.py  fastapi.py  json.py  log_config.py  logging.py  merge_chunks.py  pydantic.py  streamify.py  streaming.py
dialsdk/: application.py  assistants.py  choice.py  chunk_stream.py  stage.py
dialsdk/chat_completion/: chunks.py  request.py
dialsdk/utils/: merge_chunks.py  streaming.py
examples/: echo.py  example.py
examples/echo/: README.md  app.py  requirements.txt  test_app.py
examples/image-echo/: Dockerfile  app.py
examples/image-size/: app.py  image.py
examples/image_search/: app.py  attachment.py  embeddings.py  requirements.txt  vector_store.py
examples/image_size/: README.md  image.py  requirements.txt  test_app.py
examples/image_size/app/: image.py  main.py
examples/langchain-rag/: app.py  requirements.txt
examples/langchain_rag/: .env.example  Dockerfile  README.md  app.py  embeddings.py  requirements.txt  rest.sh  utils.py
examples/render-text/: app.py  image.py
examples/render_text/: Dockerfile  README.md  app.py  requirements.txt  test_app.py
examples/render_text/app/: image.py  main.py
scripts/: install_poetry.sh
tests/: test_app.py  test_custom_endpoints.py  test_discarded_messages.py  test_embeddings.py  test_endpoints.py  test_errors.py  test_header_propagation.py  test_heartbeat.py  test_is_implemented.py  test_max_prompt_tokens.py  test_merge_chunks.py  test_rate_response.py  test_response.py  test_serialization.py  test_single_choice.py  test_tokenize.py  test_truncate_prompt.py
tests/applications/: broken_application.py  broken_immediately.py  broken_in_runtime.py  custom_endpoints.py  echo.py  echo_application.py  idle.py  noop_application.py  runtime_broken_application.py  signle_choice_application.py  simple_embeddings.py  single_choice.py
tests/examples/: test_echo.py  test_image_size.py  test_render_text.py
tests/header_propagation/: client.py
tests/utils/: endpoint_test.py  errors.py  request.py  text.py  tokenization.py
