[tool.poetry]
name = "aidial-sdk"
version = "0.0.1"
description = "Framework to create applications and model adapters for DIAL"
authors = ["DIAL Team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.deltixhub.com/Deltix/openai-apps/dial-python-sdk.git"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
requests = "^2.31.0"
wrapt = "^1.15.0"
aiohttp = "^3.8.5"

#[tool.poetry.group.test.dependencies]
#pytest = "^7.4.2"
#pytest-asyncio = "^0.21.1"
#httpx = "^0.25.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = { version = "^23.3.0", extras = ["jupyter"] }
isort = "^5.12.0"
pyright = "^1.1.324"
autoflake = "^2.2.0"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    "**/__pycache__"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv"
]
