[metadata]
name = aidial-sdk
version = 1.0.0
requires-python = >=3.8
description = Framework to create applications and model adapters for DIAL
author = DIAL Team
author_email = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epam/aidial-sdk
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
packages = find:
